--- a/doc/trunk/design/syn/S06.pod
+++ b/doc/trunk/design/syn/S06.pod
@@ -1443,7 +1443,7 @@ The C<but I<NAME> (I<DATA>)> syntax specifies run-time properties on values:
         return 0 but true;
     }
 
-Properties are predeclared as roles and implemented as mixins--see A12.
+Properties are predeclared as roles and implemented as mixins--see S12.
 
 =head2 Subroutine traits
 
